--- a/C++/EarlyBird/EarlyBird.vcxproj
+++ b/C++/EarlyBird/EarlyBird.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{9e456a45-3315-40b6-8cb2-de676fc41367}</ProjectGuid>
-    <RootNamespace>GARunner</RootNamespace>
+    <ProjectGuid>{59fcede2-d849-4177-943f-76a36c7f0518}</ProjectGuid>
+    <RootNamespace>EarlyBird</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="GA_Runner.cpp" />
+    <ClCompile Include="EarlyBird.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
