--- a/C++/MapViewSection_Injection/MapViewSection_Injection.vcxproj
+++ b/C++/MapViewSection_Injection/MapViewSection_Injection.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="MapViewSection_Injection.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ntbasic.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
