--- a/C++/Reflective_DLLs/ReflectiveLoader_DLL/ReflectiveLoader_DLL.vcxproj.filters
+++ b/C++/Reflective_DLLs/ReflectiveLoader_DLL/ReflectiveLoader_DLL.vcxproj.filters
@@ -15,12 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="framework.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="pch.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="ReflectiveDLLInjection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -32,7 +26,7 @@
     <ClCompile Include="ReflectiveLoader_DLL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="pch.cpp">
+    <ClCompile Include="ReflectiveLoader.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
