--- a/C++/EarlyBird/EarlyBird.vcxproj.filters
+++ b/C++/EarlyBird/EarlyBird.vcxproj.filters
@@ -23,5 +23,18 @@
     <ClInclude Include="ntbasic.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="EarlyBird.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="rcdata1.bin">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
