--- a/ProcDump/ProcDump/LsassDump.csproj
+++ b/ProcDump/ProcDump/LsassDump.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{538504F6-5F8E-4DE7-B5C8-DEBD8E285FB1}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ProcDump</RootNamespace>
-    <AssemblyName>ProcDump</AssemblyName>
+    <RootNamespace>LsassDump</RootNamespace>
+    <AssemblyName>LsassDump</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
