--- a/C++/VirtualAlloc2/VirtualAlloc2.vcxproj
+++ b/C++/VirtualAlloc2/VirtualAlloc2.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{376b39b3-7879-4d64-ba41-08267ad4d1ea}</ProjectGuid>
+    <ProjectGuid>{87e21673-c715-4fbe-9597-a9b67fabb7c1}</ProjectGuid>
     <RootNamespace>VirtualAlloc2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -135,7 +135,7 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>false</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
