Adjusted RC4 Encrypter to work with .rsrc payloads

--- a/C++/RC4_SysFunc032_Encrypter/RC4_SysFunc032_Encrypter.vcxproj.filters
+++ b/C++/RC4_SysFunc032_Encrypter/RC4_SysFunc032_Encrypter.vcxproj.filters
@@ -23,5 +23,18 @@
     <ClInclude Include="typedefs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="RC4_SysFunc032_Encrypter.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="payload.bin">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
