--- a/C++/RC4_SysFunc032_Encrypter/RC4_SysFunc032_Encrypter.vcxproj
+++ b/C++/RC4_SysFunc032_Encrypter/RC4_SysFunc032_Encrypter.vcxproj
@@ -130,7 +130,14 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="resource.h" />
     <ClInclude Include="typedefs.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="RC4_SysFunc032_Encrypter.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="payload.bin" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
